...
    <string name="home_partners_tag">PARTNERS</string>

    <!-- MENU -->
    <string name="menu_sos">SOS</string>
    <string name="menu_home">HOME</string>
    <string name="menu_trails">TRAILS</string>
    <string name="menu_profile">PROFILE</string>
    <string name="menu_logout">LOGOUT</string>

    <!-- LOGIN -->
    <string name="login_button">LOGIN</string>
    <string name="login_username">username</string>
    <string name="login_password">password</string>

    <!-- PROFILE -->
    <string name="profile_premium_content_desc">Premium Logo</string>
    <string name="profile_picture_content_desc">User Stock Photo</string>
    <string name="history_button">History</string>
    <string name="settings_button">Settings</string>
    <string name="first_last_name">First Last Name</string>
    <string name="profile_username">Username</string>

...
